src/index.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";
@plugin "daisyui";

:root {
  --color-base-100: #fff;
  --color-base-200: #fbfaf3;
  /* --color-base-300: oklch(91% 0.018 78.24); */
  --color-base-content: oklch(38.84% 0.0444 44.12);
  --color-primary: #ffbc51;
  --color-primary-content: #D88A0E;
  /* --color-secondary: oklch(27.12% 0.188 264.052); */
  /* --color-secondary-content: oklch(88% 0.059 254.128); */
  --color-accent: #a673e6;
  --color-accent-content: #56298E;
  /* --color-neutral: oklch(38.84% 0.044 44.12); */
  /* --color-neutral-content: oklch(99% 0.01 78.24); */
  --color-info: #55cee0;
  --color-info-content: #2478A8;
  --color-success: #94cc6f;
  --color-success-content: #5D884F;
  /* --color-warning: #ffbc51; */
  /* --color-warning-content: D88A0E; */
  --color-error: #ff7a5c;
  --color-error-content: #CC5129;
  --radius-selector: 2rem;
  --radius-field: 2rem;
  --radius-box: 2rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;

  /* ---------- PAGEFIND ---------- */
  --pagefind-ui-scale: 1;
  --pagefind-ui-primary: var(--color-primary);
  --pagefind-ui-text: var(--color-base-content);
  --pagefind-ui-background: transparent;
  --pagefind-ui-border: var(--color-base-300);
  /* --pagefind-ui-tag: <color> */
  --pagefind-ui-border-width: 4px;
  /* --pagefind-ui-border: var(--color-primary); */
  --pagefind-ui-border-radius: var(--radius-field);
  /* --pagefind-ui-image-border-radius: 8px; */
  /* --pagefind-ui-image-box-ratio: 3 / 2; */
  /* --pagefind-ui-font: var(--font-family-heading); */
}

/* Dark mode colors */
@media (prefers-color-scheme: dark) {
  :root {
    color-scheme: dark light;
    --color-base-100: #44423c;
    --color-base-200: #363530;
    /* --color-base-300: ??? */
    --color-base-content: #e5e0c1;

    --color-primary-content: #FBE1AB;
    /* --color-secondary-content: #; */
    --color-accent-content: #CBA7F6;
    /* --color-neutral-content: #; */
    --color-info-content: #A3E7F1;
    --color-success-content: #BFE0A9;
    /* --color-warning-content: #FBE1AB; */
    --color-error-content: #FEB1A0;
  }
}

/* ---------- PAGEFIND ---------- */

.pagefind-ui__search-input {
  @apply !border-primary focus:outline-none;
}

/* ---------- CUSTOM HELPERS ---------- */

.title {
  @apply mt-32 mb-4 text-center text-4xl font-black;
}
.subtitle {
  @apply mb-12 text-center text-lg font-light text-base-content/80 italic font-serif;
}
.svg-base svg * {
  @apply !fill-base-100;
}

/* ---------- PREVIEW COMPONENT ---------- */

.preview {
  max-height: 220px;
}
.preview img {
  max-width: 33%;
  max-height: 100%;
  object-fit: cover;
  border-radius: var(--radius-box) 0 0 var(--radius-box);
}
.preview-details {
  @apply flex flex-col flex-1 p-8 gap-4 text-xs justify-center;
}
.preview-description {
  @apply font-light text-base-content/80 line-clamp-3;
}

/* ---------- TAILWIND ---------- */

.link-hover {
  @apply hover:underline-offset-[0.3rem] hover:decoration-4;
}
.divider svg {
  @apply size-40 mx-8;
}

/* ---------- TAILWIND PROSE ---------- */

.prose :is(h1, h2, h3, h4, h5, h6) a {
  @apply no-underline font-black;
}
.prose :is(h1, h2, h3, h4, h5, h6):hover::before {
  @apply opacity-50 inline-block whitespace-pre no-underline;
  content: "#  ";
}
.prose h2:hover::before {
  @apply  -ml-6.5;
}
.prose h3:hover::before {
  @apply  -ml-5.5;
}
.prose :is(h4, h5, h6):hover::before {
  @apply  -ml-4.5;
}
.prose p a {
  @apply mx-0.5 font-bold hover:decoration-3;
}
.prose blockquote {
  @apply border-l-4 border-success pl-4 ml-0 italic font-black text-2xl text-success text-pretty;
}
.prose li::marker {
  @apply text-primary font-bold;
}
.prose ul li::marker {
  @apply text-xl;
}
.prose img,
.prose figure {
  @apply m-0;
}

/* ---------- OBSIDIAN CALLOUTS ---------- */
.callout {
  @apply border-l-4 border-info pl-4 ml-0 mt-10 text-info-content;
}
.callout a {
  @apply !text-info-content mx-0.5 font-bold;
}
.callout li::marker {
  @apply text-info;
}
.callout strong {
  @apply text-info-content;
}
.callout hr {
  @apply my-6
}
.callout .callout-title {
  @apply flex items-center gap-3 text-info font-bold text-lg ml-1;
}
.callout .callout-title svg {
  @apply size-4;
}
 
.callout[data-callout="caution"],
.callout[data-callout="caution"] * {
  @apply border-error !text-error-content;
}
.callout[data-callout="tip"],
.callout[data-callout="tip"] * {
  @apply border-accent !text-accent-content;
}

